Add lombok. Fix clean code stuff in CoinModel. Set min sdk and target sdk to 28. Change List.of() to Arrays.asList or Collections.singletonList()